--- a/source/dev/_/parts/examples.pug
+++ b/source/dev/_/parts/examples.pug
@@ -2,39 +2,42 @@
 	.case
 		.examples__title.h1 стоимость механизированной #[br]штукатурки #[strong для типовых квартир]
 		.examples__subtitle.h2 В стоимость включена: работа, доставка, материалы и откосы
-		.examples__list.row
-			.examples__item
-				.examples__name 1-комнатная
-				.examples__size до 40 м#[sup 2]
-				.examples__img
-					img(src="_/uploads/example-1.png" alt="")
-				.examples__price
-					.examples__price-title Стоимость
-					.examples__price-list.row
-						.examples__price-item.--old 79 500 РУБ.
-						.examples__price-item.--current 74 700 РУБ.
-				a.examples__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") СВЯЗАТЬСЯ С МЕНЕДЖЕРОМ
+		.examples__slider
+			.examples__list.row
+				.examples__item
+					.examples__name 1-комнатная
+					.examples__size до 40 м#[sup 2]
+					.examples__img
+						img(src="_/uploads/example-1.png" alt="")
+					.examples__price
+						.examples__price-title Стоимость
+						.examples__price-list.row
+							.examples__price-item.--old 79 500 РУБ.
+							.examples__price-item.--current 74 700 РУБ.
+					a.examples__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") СВЯЗАТЬСЯ С МЕНЕДЖЕРОМ
 
-			.examples__item
-				.examples__name 2-комнатная
-				.examples__size до 48 м#[sup 2]
-				.examples__img
-					img(src="_/uploads/example-2.png" alt="")
-				.examples__price
-					.examples__price-title Стоимость
-					.examples__price-list.row
-						.examples__price-item.--old 92 500 РУБ.
-						.examples__price-item.--current 87 700 РУБ.
-				a.examples__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") СВЯЗАТЬСЯ С МЕНЕДЖЕРОМ
+				.examples__item
+					.examples__name 2-комнатная
+					.examples__size до 48 м#[sup 2]
+					.examples__img
+						img(src="_/uploads/example-2.png" alt="")
+					.examples__price
+						.examples__price-title Стоимость
+						.examples__price-list.row
+							.examples__price-item.--old 92 500 РУБ.
+							.examples__price-item.--current 87 700 РУБ.
+					a.examples__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") СВЯЗАТЬСЯ С МЕНЕДЖЕРОМ
 
-			.examples__item
-				.examples__name 3-комнатная
-				.examples__size до 60 м#[sup 2]
-				.examples__img
-					img(src="_/uploads/example-3.png" alt="")
-				.examples__price
-					.examples__price-title Стоимость
-					.examples__price-list.row
-						.examples__price-item.--old 113 500 РУБ.
-						.examples__price-item.--current 108 500 РУБ.
-				a.examples__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") СВЯЗАТЬСЯ С МЕНЕДЖЕРОМ
+				.examples__item
+					.examples__name 3-комнатная
+					.examples__size до 60 м#[sup 2]
+					.examples__img
+						img(src="_/uploads/example-3.png" alt="")
+					.examples__price
+						.examples__price-title Стоимость
+						.examples__price-list.row
+							.examples__price-item.--old 113 500 РУБ.
+							.examples__price-item.--current 108 500 РУБ.
+					a.examples__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") СВЯЗАТЬСЯ С МЕНЕДЖЕРОМ
+
+		+swipe('examples', 'Чтобы посмотреть другие отделы, <br>проведите в сторону')
