--- a/source/dev/_/parts/instructions.pug
+++ b/source/dev/_/parts/instructions.pug
@@ -3,7 +3,7 @@
 		.instructions__wrap.row
 			.instructions__content
 				.instructions__title.h1 Получите #[br]инструкцию
-				.instructions__subtitle.h2 #[strong «Как не потерять до 80 000 рублей] #[br]при выборе случайной бригады #[br]по механизированной штукатурке»
+				.instructions__subtitle.h2 #[strong «Как не потерять #[span.nowraptext до 80 000 рублей]] #[br]при выборе случайной бригады #[br]по механизированной штукатурке»
 				.instructions__text.t2
 					h3 Из инструкции вы узнаете:
 					ul
