--- a/source/dev/_/parts/remotely.pug
+++ b/source/dev/_/parts/remotely.pug
@@ -38,6 +38,8 @@
 
 			.remotely__feedback
 				.remotely__form.form.--row
+					.form__img
+						img(src="_/uploads/olga-1.png" alt="")
 					.form__inner
 						.form__title Рассчитайте стоимость #[br]штукатурки удаленно
 						.form__subtitle Я задам уточняющие вопросы #[br]для расчёта стоимости и после #[br]разговора вышлю смету в WhatsApp
