--- a/source/dev/_/parts/save.pug
+++ b/source/dev/_/parts/save.pug
@@ -15,4 +15,4 @@
 					.copy__wrap.row
 						.copy__icon
 							img(src="_/uploads/click.png" alt="")
-						.copy__text Добавьте сайт в закладки: #[br]нажмите Ctrl+D
+						.copy__text Добавьте сайт #[br.hidden-br]в закладки#[u : #[br]нажмите Ctrl+D]
