--- a/source/dev/_/parts/steps.pug
+++ b/source/dev/_/parts/steps.pug
@@ -31,3 +31,5 @@
 				.steps__img
 					img(src="_/uploads/step-5.png" alt="")
 				.steps__count 05
+
+		a.steps__btn-mobile.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-calc") РАССЧИТАТЬ СТОИМОСТЬ
