--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -2159,6 +2159,18 @@ sup
 	&__content
 		width: 580px
 		padding-top: 100px
+	&__quote
+		position: relative
+		&:before
+			content: ''
+			position: absolute
+			top: 44px
+			left: -20px
+			width: 0
+			height: 0
+			border-style: solid
+			border-width: 0 20px 21px 0
+			border-color: transparent #ffffff transparent transparent
 	&__btn
 		margin-top: 50px
 		display: inline-flex
@@ -2780,6 +2792,9 @@ sup
 		padding: 50px 60px 38px
 		&.--row
 			.form
+				&__img
+					display: none
+					
 				&__title
 					line-height: 26px
 					text-align: left
@@ -2896,6 +2911,9 @@ sup
 		text-align: right
 		letter-spacing: 0.5px
 		transform: translateY(-50%)
+
+	&__btn-mobile
+		display: none
 
 .cheap
 	padding-top: 78px
@@ -3056,6 +3074,10 @@ sup
 			transform: translate(-50%, -50%)
 			background: url('../imgs/youtube-icon.png') no-repeat center, #fff
 			border-radius: 15px
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
 	&__data
 		display: flex
 		flex-wrap: wrap
