--- a/source/dev/_/sys/sass/responsive.sass
+++ b/source/dev/_/sys/sass/responsive.sass
@@ -17,7 +17,6 @@
 		&__desc
 			right: -15px
 
-
 @media only screen and (max-width: 1390px)
 	.estimate
 		&__imgs
@@ -30,9 +29,6 @@
 					right: 0
 		&__form
 			right: 120px
-					
-
-			
 
 @media only screen and (max-width: 1230px)
 	.h1
@@ -94,7 +90,6 @@
 			br
 				display: none
 
-
 	.surface
 		padding-top: 75px
 		&__item
@@ -104,7 +99,6 @@
 		padding-top: 130px
 		&__desc
 			margin-top: 25px
-
 
 	.p-item
 		&__body
@@ -148,7 +142,6 @@
 		&__img
 			width: 960px
 
-
 	.fix
 		&.--pb
 			padding-bottom: 60px
@@ -172,7 +165,6 @@
 	.warranty
 		&__item
 			background-color: #fff
-
 
 	.ready
 		&.--bg
@@ -215,7 +207,7 @@
 		padding-top: 80px
 		&__img-wrap
 			width: calc(100% - 450px)
-			
+
 		&__content
 			max-width: 450px
 			margin-left: auto
@@ -236,7 +228,7 @@
 				background-size: 100% auto
 		&__bg
 			object-position: center bottom
-			
+
 	.quality
 		&__text
 			padding-left: 30px
@@ -265,7 +257,7 @@
 
 		&__img-wrap
 			width: calc(100% - 490px)
-			
+
 		&__wrap
 			min-height: 740px
 		&__content
@@ -274,7 +266,6 @@
 			padding: 20px
 			br
 				display: none
-
 
 	.objects
 		padding-top: 80px
@@ -305,7 +296,7 @@
 		&__data
 			br
 				display: none
-	
+
 	.estimate
 		&__img
 			width: 300px
@@ -336,7 +327,6 @@
 			top: -18px
 			right: -256px
 
-
 	.reviews
 		padding-top: 80px
 		padding-bottom: 80px
@@ -347,7 +337,6 @@
 		&__arrow
 			&.--mt
 				margin-top: -30px
-				
 
 	.review
 		padding: 10px
@@ -373,9 +362,8 @@
 		&__aggregator
 			margin-top: 20px
 
-
 	.reputation
-		&__img-wrap		
+		&__img-wrap
 			width: 460px
 		&__content
 			max-width: 480px
@@ -386,7 +374,7 @@
 			margin-right: 0
 			&:before
 				display: none
-	
+
 	.express
 		padding-bottom: 60px
 		&__list
@@ -411,7 +399,6 @@
 			margin-left: -170px
 		&__scheme
 			margin-left: -200px
-			
 
 	.examples
 		padding-bottom: 60px
@@ -425,7 +412,7 @@
 	.remotely
 		&__img
 			display: none
-			
+
 	.steps
 		padding-top: 70px
 		padding-bottom: 50px
@@ -479,7 +466,6 @@
 		&__name
 			font-size: 14px
 
-
 	.do
 		&__list
 			// align-items: flex-start
@@ -509,7 +495,7 @@
 			padding: 35px
 		&__content
 			padding-top: 0
-			
+
 		&__logo
 			z-index: 2
 			position: relative
@@ -536,7 +522,6 @@
 		&__send
 			margin-top: 0
 			max-width: 450px
-
 
 	.send
 		padding: 35px
@@ -610,7 +595,6 @@
 		&__value
 			br
 				display: none
-			
 
 	.works
 		&__item
@@ -636,7 +620,7 @@
 				&__item, &__prev, &__next
 					width: 60px
 					height: 60px
-			
+
 	.questions
 		&__img-wrap
 			width: 480px
@@ -748,7 +732,6 @@
 		&__bot
 			padding-bottom: 35px
 
-
 @media only screen and (max-width: 992px)
 	.case
 		max-width: 750px
@@ -777,8 +760,7 @@
 			margin-left: 0
 		&__links
 			margin-left: 30px
-			
-			
+
 	.intro
 		height: 885px
 		&__round
@@ -968,7 +950,7 @@
 			&.--md
 				font-size: 11px
 				line-height: 20px
-					
+
 	.de
 		padding-top: 40px
 		&__img-wrap
@@ -1026,7 +1008,7 @@
 			left: 0
 			&:before
 				display: none
-			
+
 		&__content
 			max-width: 100%
 			padding-bottom: 0
@@ -1040,13 +1022,13 @@
 				// margin-bottom: 0
 	.object
 		&__content
-			order: 2  !important
+			order: 2 !important
 			width: 100%
 			padding-left: 0 !important
 			padding-right: 0 !important
 		&__imgs
 			width: 100%
-			order: 1  !important
+			order: 1 !important
 			margin-bottom: 20px
 
 	.estimate
@@ -1064,7 +1046,7 @@
 					left: -35px
 				&.--next
 					right: -35px
-					
+
 		&__img
 			width: 260px
 			top: -120px
@@ -1110,7 +1092,7 @@
 			padding-top: 60px
 		&__btn
 			margin-top: 30px
-			
+
 	.quote
 		padding: 25px
 		br
@@ -1121,7 +1103,7 @@
 		padding-bottom: 60px
 		&__phone
 			display: none
-			
+
 	.reviews
 		padding-top: 55px
 		padding-bottom: 55px
@@ -1240,8 +1222,8 @@
 			overflow: hidden
 			justify-content: flex-start
 			img
-				max-width: none  !important
-				max-height: none  !important
+				max-width: none !important
+				max-height: none !important
 		&__text
 			max-width: 100%
 			padding-left: 145px
@@ -1251,7 +1233,7 @@
 					margin-top: 0
 		&__btn
 			display: none
-			
+
 	.cheap
 		padding-bottom: 40px
 		&__img-wrap
@@ -1314,7 +1296,7 @@
 			display: none
 		&__img
 			margin-bottom: -500px
-		
+
 	.instructions
 		padding-top: 45px
 		&__content
@@ -1332,7 +1314,7 @@
 		height: 580px
 		&.--mt
 			margin-top: 30px
-			
+
 	.contacts
 		&__content
 			width: 100%
@@ -1384,7 +1366,6 @@
 			&.--next
 				right: 30px
 
-	
 	.questions
 		padding-bottom: 35px
 		&__img-wrap
@@ -1397,7 +1378,7 @@
 		&__person
 			top: 20px
 			left: 0
-				
+
 		&__img
 			width: auto
 			margin-left: 40px
@@ -1469,7 +1450,6 @@
 			font-size: 14px
 			line-height: 21px
 
-			
 	.jobs
 		&__item
 			padding-left: 0
@@ -1478,7 +1458,7 @@
 	.job
 		&__text
 			max-width: 470px
-	
+
 	.j-form
 		padding: 35px
 		&__wrap
@@ -1491,11 +1471,9 @@
 			margin-right: 10px
 			margin-bottom: 20px
 
-
 	.parking
 		margin-left: 0
 		width: 50%
-
 
 	.about
 		&__name
@@ -1518,11 +1496,9 @@
 
 		&__btn
 			display: none
-			
 
 	.breadcrumbs
 		padding-top: 15px
-
 
 	.contacts-p
 		padding-bottom: 170px
@@ -1545,7 +1521,7 @@
 			max-width: none
 			margin-left: 10px
 			margin-right: 10px
-		
+
 		&__dev
 			margin-left: auto
 
@@ -1554,12 +1530,10 @@
 				display: inline
 			br
 				display: none
-			
 
 @media only screen and (max-width: 768px)
 	.case
 		max-width: 100%
-
 
 	.mob-nav
 		display: block
@@ -1583,7 +1557,6 @@
 			border-bottom: none
 		&__logo
 			border-right: 1px solid rgba(0,0,0,.05)
-
 
 	.ntoggle
 		cursor: pointer
@@ -1626,7 +1599,7 @@
 						&:nth-of-type(4)
 							top: -7px
 							transform: rotate(-45deg)
-			
+
 	.m-nav-s
 		z-index: 100
 		position: absolute
@@ -1638,7 +1611,7 @@
 		border-bottom: 1px solid rgba(87,94,98,0.1)
 		&__wrap
 			align-items: center
-			
+
 		&__phone
 			margin-bottom: 4px
 		&__call
@@ -1731,8 +1704,6 @@
 			right: 0
 			background-color: #f4f4f4
 
-
-
 	.panel
 		padding-top: 75px
 		&__logo
@@ -1770,7 +1741,6 @@
 	.h2
 		font-size: 18px
 		line-height: 27px
-
 
 	.first-slide
 		padding-top: 170px
@@ -1818,7 +1788,7 @@
 			right: 50%
 			margin-right: -200px
 			transform: translateX(50%)
-			
+
 		&__btn
 			width: 100%
 			margin-top: 20px
@@ -1891,7 +1861,7 @@
 			text-align: center
 			margin-left: auto
 			margin-right: auto
-			
+
 		&__quote
 			margin-bottom: 50px
 			&:before
@@ -1936,7 +1906,7 @@
 				.surface
 					&__img
 						display: none
-						
+
 	.price
 		padding-top: 50px
 		&__title
@@ -1963,7 +1933,6 @@
 			opacity: 0.7
 			font-size: 14px
 			line-height: 20px
-			
 
 	.price
 		&__slider
@@ -2048,7 +2017,6 @@
 		&__gifts
 			display: block
 			width: 100%
-			
 
 	.status
 		margin-left: -5px
@@ -2061,7 +2029,6 @@
 			margin-right: 5px
 			overflow: hidden
 
-	
 	.c-thanks
 		&__title
 			text-align: center
@@ -2070,7 +2037,6 @@
 			margin-bottom: 15px
 		&__btn-desc
 			text-align: center
-			
 
 	.b-gifts
 		padding-left: 15px
@@ -2080,7 +2046,6 @@
 			padding: 20px 0 25px
 		&__item
 			padding: 15px 20px
-
 
 	.oneday
 		padding-top: 55px
@@ -2115,12 +2080,13 @@
 			bottom: 0
 		&__round
 			bottom: -120px
-			
-			
+
 	.fix
+		&.--pb
+			padding-bottom: 80px
 		&__content
 			padding-top: 160px
-			padding-bottom: 325px
+			padding-bottom: 345px
 		&__subtitle
 			font-size: 16px
 			line-height: 25px
@@ -2131,11 +2097,12 @@
 		&__count
 			top: 636px
 			right: 50%
-			margin-right: 90px
+			margin-right: 110px
 			transform: translateX(50%)
 			&:after
 				display: none
 		&__img
+			z-index: 2
 			top: 636px
 			right: 50%
 			margin-right: -120px
@@ -2152,6 +2119,7 @@
 			max-width: 190px
 			margin-left: auto
 			margin-right: auto
+
 	.warranty
 		&__title
 			font-size: 18px
@@ -2167,7 +2135,6 @@
 			&:last-of-type
 				margin-bottom: 0
 
-
 	.ready
 		&__content
 			padding-top: 55px
@@ -2175,7 +2142,7 @@
 			text-align: center
 		&__subtitle
 			text-align: center
-		
+
 		&__list
 			margin-bottom: 0
 		&__item
@@ -2241,7 +2208,6 @@
 					br
 						display: none
 
-
 	.whatsapp
 		margin-top: 0
 		padding-top: 55px
@@ -2256,7 +2222,7 @@
 			text-align: center
 			br
 				display: block
-			
+
 		&__img
 			order: 3
 			margin-top: 40px
@@ -2280,7 +2246,7 @@
 			margin-top: 30px
 		&__photo
 			width: calc(100% / 2 - 16px)
-			height: 152px
+			height: 96px
 			margin-left: 8px
 			margin-right: 8px
 		&__img-wrap
@@ -2292,11 +2258,10 @@
 		flex-direction: column
 		&__icon
 			margin-bottom: 15px
-			
+
 		&__text
 			padding-left: 0
 			text-align: center
-			
 
 	.economy
 		padding-bottom: 320px
@@ -2306,7 +2271,7 @@
 			background-color: transparent
 			margin-bottom: -95px
 			box-shadow: none
-			
+
 		&__item
 			width: 100%
 			margin-bottom: 95px
@@ -2384,7 +2349,6 @@
 			margin-top: 20px
 			margin-left: auto
 			margin-right: auto
-		
 
 	.imgs
 		&__list
@@ -2401,9 +2365,6 @@
 				left: 20px
 			&.--next
 				right: 20px
-
-
-		
 
 	.data
 		&__list
@@ -2426,8 +2387,7 @@
 			font-size: 12px
 			margin-left: 2px
 			letter-spacing: 0.1px
-		
-					
+
 	.estimate
 		padding-top: 55px
 		&__subtitle
@@ -2631,7 +2591,7 @@
 			right: 50%
 			margin-right: -50px
 			transform: translateX(50%)
-	
+
 	.reviews
 		padding-top: 60px
 		&__title, &__subtitle, &__desc
@@ -2651,7 +2611,7 @@
 					&__swipe
 						margin-top: 35px
 						border-top: 1px solid #d1d1d1
-				
+
 		&__swipe
 			// border-top: 1px solid #d1d1d1
 			border-color: #d1d1d1
@@ -2843,7 +2803,6 @@
 			margin-left: 0
 			margin-right: 0
 
-
 	.examples
 		padding-top: 35px
 		padding-bottom: 0
@@ -2913,7 +2872,6 @@
 			border-bottom: none
 			margin-top: 40px
 
-
 	.steps
 		padding-top: 60px
 		&__title
@@ -2924,7 +2882,7 @@
 			margin-right: -15px
 			padding-top: 40px
 			height: auto
-			min-height: 140px 
+			min-height: 140px
 			flex-direction: column
 		&__text
 			order: 2
@@ -2940,7 +2898,7 @@
 					max-width: 170px
 			br
 				display: none
-				
+
 		&__count
 			order: 1
 			// position: relative
@@ -3001,7 +2959,7 @@
 			left: 50%
 			margin-left: -80px
 			transform: translateX(-50%) scale(-1, 1)
-				
+
 	.c-why
 		max-width: 290px
 		margin-left: auto
@@ -3092,6 +3050,7 @@
 			transform: translateX(-50%)
 		&__bg
 			display: none
+
 	.pay
 		margin-top: 0
 		&__wrap
@@ -3118,10 +3077,6 @@
 			&.btn
 				padding-left: 10px
 				padding-right: 10px
-
-
-			
-
 
 	.cooperate
 		background-color: #fff
@@ -3172,8 +3127,7 @@
 		&__bg.bg
 			top: auto
 			height: 800px
-			
-			
+
 	.instructions
 		padding-top: 50px
 		padding-bottom: 40px
@@ -3218,7 +3172,6 @@
 			height: 73px
 			padding: 25px
 			top: -35px
-			
 
 		&__send
 			margin-top: 140px
@@ -3235,7 +3188,6 @@
 			right: -35px
 			img
 				margin-bottom: -100px
-			
 
 	.save
 		padding-top: 50px
@@ -3259,7 +3211,7 @@
 			width: 500px
 			margin-left: -150px
 			transform: translateX(-50%)
-			
+
 	.copy
 		display: flex
 		align-items: center
@@ -3301,13 +3253,13 @@
 	.footer
 		max-width: 380px
 		width: 100%
-		margin-left: auto	
-		margin-right: auto	
+		margin-left: auto
+		margin-right: auto
 		&__top
 			border-top: 1px solid #ececec
 			padding-top: 50px
 			padding-bottom: 30px
-			
+
 		&__company
 			display: flex
 			justify-content: space-between
@@ -3345,7 +3297,7 @@
 		&__mid
 			padding-top: 30px
 			padding-bottom: 30px
-		
+
 		&__nav
 			width: calc(100% / 2 - 20px)
 			margin-bottom: 7px
@@ -3364,29 +3316,19 @@
 		&__bot
 			padding-top: 30px
 			padding-bottom: 40px
-				
-			
-			
-				
-				
-			
-
-	.contacts-p
-		padding-bottom: 30px
 
 	.contacts
-		&.--p-abs
-			.contacts
-				&__inner
-					box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
-				&__wrap
-					position: relative
-					top: 0
-					left: 0
-					right: 0
-					transform: none
-					border-radius: 0px
-					box-shadow: none
+		&__title
+			text-align: center
+			font-size: 24px
+			margin-bottom: 30px
+			&.--sm
+				text-align: center
+		&__wrap
+			padding: 50px 15px
+			max-width: 350px
+			margin-left: auto
+			margin-right: auto
 		&__data
 			flex-direction: column
 			&-col
@@ -3395,32 +3337,50 @@
 				justify-content: space-between
 				margin-bottom: 20px
 				&:nth-of-type(1)
-					order:2
+					order: 2
 					flex-wrap: wrap
 					flex-direction: column
 				&:nth-of-type(2)
-					order:1
+					order: 1
 		&__contact
 			margin-bottom: 0
 		&__consult
-
 			max-width: 110px
 			margin-top: 0
 			position: absolute
-			right: 48px
+			right: 25px
 		&__req
 			margin-top: 0
 			width: 100%
 		&__parking
 			margin-top: 30px
-			
-	.parking
-		width: 100%
-		&__text
-			max-width: 240px
-			br
-				display: none
-			
+		&__feedback
+			padding-top: 0
+			margin-top: 30px
+			max-width: 100%
+
+	// .contacts
+	// 	&.--p-abs
+	// 		.contacts
+	// 			&__inner
+	// 				box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+	// 			&__wrap
+	// 				position: relative
+	// 				top: 0
+	// 				left: 0
+	// 				right: 0
+	// 				transform: none
+	// 				border-radius: 0px
+	// 				box-shadow: none
+	// 	
+
+	// .parking
+	// 	width: 100%
+	// 	&__text
+	// 		max-width: 240px
+	// 		br
+	// 			display: none
+
 	.map
 		height: 360px
 
@@ -3432,23 +3392,23 @@
 			left: auto
 		&__img-wrap
 			margin-left: -60px
-			
+
 		&__form
 			max-width: 320px
 			margin-left: auto
 			margin-right: auto
 
-	.form				
+	.form
 		&__textarea
 			width: 100%
 			margin-left: 0
 			margin-right: 0
-			
+
 	.works
 		&__list
 			margin-left: 0
 			margin-right: 0
-		
+
 		&__item
 			width: 100%
 			margin-left: 0
@@ -3457,7 +3417,7 @@
 		&__name, &__foot
 			padding-left: 20px
 			padding-right: 20px
-	
+
 	.work
 		&__content
 			padding-right: 0
@@ -3465,7 +3425,7 @@
 
 			margin-top: 36px
 			margin-bottom: 36px
-	
+
 	.w-sli
 		&__list
 			&-item
@@ -3477,13 +3437,11 @@
 				right: 20px
 			&.--prev
 				left: 20px
-				
 
 	.arrow
 		width: 56px
 		height: 56px
 
-		
 	.data
 		&__list
 			margin-left: 0
@@ -3507,25 +3465,98 @@
 				order: 3
 			&:nth-of-type(5)
 				order: 5
-			
+
 	.about
 		padding-bottom: 240px
+		&__bg
+			.bg-wrap
+				.bg
+					top: 1030px
 		&__title
 			max-width: 200px
 			text-align: center
 		&__list
 			margin-bottom: -60px
-			
+
 		&__item
 			width: 100%
 			max-width: 290px
-			margin-left: auto	
+			margin-left: auto
 			margin-right: auto
 			margin-bottom: 60px
 			padding: 0 20px 45px 20px
 		&__img
 			width: 370px
 			bottom: 0
-			
-			
-				
+
+	.team
+		&__title
+			margin-bottom: 35px
+			br
+				display: none
+
+	.order
+		padding-top: 260px
+		&__bg
+			display: none
+		&__wrap
+			flex-direction: column
+		&__img-wrap
+			z-index: -1
+			right: 15px
+			top: 160px
+			order: 2
+			width: 225px
+			position: absolute
+		&__img
+			margin-left: 0
+		&__person
+			left: -100px
+		&__content
+			order: 1
+		&__title, &__subtitle
+			text-align: center
+		&__title
+			margin-bottom: 10px
+		&__inner
+			background: #fff
+			box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+			border-radius: 8px
+			max-width: 350px
+			width: 100%
+			margin-top: 270px
+			margin-left: auto
+			margin-right: auto
+			padding: 30px 15px
+		&__text
+			h3
+				text-align: center
+		&__form
+			.form
+				&__inner
+					padding: 0 15px !important
+				&__input
+					&.--bg-white
+						.input
+							&__area
+								background-color: #f4f4f4
+								box-shadow: inset 4px 4px 10px rgb(0 0 0 / 5%)
+				&__policy
+					padding: 0 15px
+		&__call
+			display: block
+			border-top: none
+			border-bottom: none
+			margin-top: 0
+			padding-top: 50px
+
+	.person
+		&__name, &__position
+			font-size: 14px
+			line-height: 21px
+		&__name
+			margin-bottom: 3px
+
+	.call
+		&__wrap
+			padding-left: 30px
