works & work pages +

--- a/source/dev/_/sys/css/responsive.css
+++ b/source/dev/_/sys/css/responsive.css
@@ -4101,6 +4101,29 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+  .works__name {
+    margin-bottom: 20px;
+  }
+  .works__data {
+    width: 100%;
+    padding-right: 0;
+    margin-bottom: 30px;
+  }
+  .works__data .data__item {
+    width: 100% !important;
+    margin-bottom: 10px;
+  }
+  .works__link {
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .works__text {
+    display: flex;
+  }
 
   .work__content {
     padding-right: 0;
@@ -4123,15 +4146,30 @@
     left: 20px;
   }
 
+  .w-gifts {
+    max-width: 450px;
+  }
+  .w-gifts__item {
+    padding: 30px;
+  }
+  .w-gifts__name {
+    margin-bottom: 0px;
+  }
+  .w-gifts__text {
+    max-width: 260px;
+  }
+
   .arrow {
     width: 56px;
     height: 56px;
+  }
+  .arrow svg {
+    width: 12px;
   }
 
   .data__list {
     margin-left: 0;
     margin-right: 0;
-    margin-bottom: -20px;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -4141,7 +4179,7 @@
     margin-bottom: 20px;
   }
   .data__item:nth-of-type(1) {
-    width: 40%;
+    width: 50%;
     order: 1;
   }
   .data__item:nth-of-type(2) {
@@ -4265,5 +4303,16 @@
 
   .call__wrap {
     padding-left: 30px;
+  }
+
+  .ready.--bg {
+    padding-bottom: 70px;
+  }
+  .ready__form {
+    max-width: 380px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px;
   }
 }
