--- a/source/dev/_/sys/css/style.css
+++ b/source/dev/_/sys/css/style.css
@@ -5601,6 +5601,14 @@ sup {
   width: calc(100% - 60px);
   padding-right: 10px;
 }
+.works__text {
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  letter-spacing: 0.26px;
+  display: none;
+}
 .works__icon {
   display: flex;
   align-items: center;
