--- a/source/dev/_/sys/sass/responsive.sass
+++ b/source/dev/_/sys/sass/responsive.sass
@@ -3363,6 +3363,8 @@
 		height: 360px
 
 	.questions
+		&.--pt
+			padding-top: 0
 		&__subtitle
 			font-size: 16px
 		&__person
@@ -3579,3 +3581,22 @@
 			margin-left: auto
 			margin-right: auto
 			padding: 40px
+
+	.articles
+		&__item
+			height: 200px
+			padding: 20px
+		&__link
+			max-width: 100%
+			display: flex
+			justify-content: space-between
+			span
+				max-width: 200px
+				line-height: 23px
+
+	.t1
+		h1
+			font-size: 24px
+			line-height: 35px
+			br
+				display: none
