--- a/source/dev/_/sys/sass/responsive.sass
+++ b/source/dev/_/sys/sass/responsive.sass
@@ -3082,6 +3082,35 @@
 		background-color: #fff
 		margin-top: 0
 		padding-top: 65px
+		&.--page
+			padding-bottom: 70px
+			.cooperate
+
+				&__wrap
+					padding: 25px 25px 40px 25px
+					background-color: #fff
+					border-radius: 8px
+					box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+					margin-top: 330px
+				&__bg
+					&.bg
+						top: 0
+						height: 1000px
+						z-index: -2
+				&__img
+					order: 1
+					top: -300px
+					bottom: 0
+					margin-bottom: 0
+					z-index: -1
+				&__content
+					display: none
+				&__mobile
+					display: block
+					order: 2
+					margin-bottom: 30px
+				&__logos
+					order: 3
 		&__wrap
 			flex-direction: column
 			background-color: transparent
