--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -3226,6 +3226,37 @@ sup
 			width: 93px
 			height: 128px
 			background: url('../imgs/lines-7.svg') no-repeat center
+	&__mobile
+		background-color: #ffffff
+		border-radius: 8px
+
+		display: none
+		&-title
+			font-size: 18px
+			line-height: 30px
+			margin-bottom: 16px
+		&-text
+			p
+				line-height: 24px
+				margin-bottom: 10px
+				&:last-of-type
+					margin-bottom: 0
+		&-form
+			margin-top: 26px
+			max-width: 290px
+			margin-left: auto
+			margin-right: auto
+		&-btn
+			margin-top: 20px
+			margin-bottom: 20px
+			&.--sm
+				padding: 5px 41px
+		&-policy
+			opacity: 0.5
+			font-size: 11px
+			line-height: 19px
+			br
+				display: none
 
 .instructions
 	position: relative
