--- a/source/dev/_/sys/sass/responsive.sass
+++ b/source/dev/_/sys/sass/responsive.sass
@@ -3629,3 +3629,25 @@
 			line-height: 35px
 			br
 				display: none
+
+	.jobs
+		padding-bottom: 70px
+		&__item
+			padding-left: 30px
+			padding-right: 30px
+		&__form
+			margin-top: 60px
+
+	.j-form
+		&__title
+			text-align: center
+			line-height: 25px
+		&__wrap
+			margin-left: 0
+			margin-right: 0
+		&__item
+			width: 100%
+			margin-left: 0
+			margin-right: 0
+		&__policy
+			text-align: center
