--- a/source/dev/_/sys/sass/responsive.sass
+++ b/source/dev/_/sys/sass/responsive.sass
@@ -3375,7 +3375,18 @@
 			padding-top: 30px
 			padding-bottom: 40px
 
+	.contacts-p
+		padding-bottom: 40px
+
 	.contacts
+		&.--page
+			.contacts
+				&__wrap
+					position: relative
+					left: 0
+					right: 0
+					box-shadow: none
+					transform: none
 		&__title
 			text-align: center
 			font-size: 24px
@@ -3417,8 +3428,29 @@
 			margin-top: 30px
 			max-width: 100%
 
+	.contact
+		&__value
+			display: flex
+			flex-wrap: wrap
+			p
+				width: 50%
+				&:nth-of-type(1)
+					width: 100%
+					order: 1
+				&:nth-of-type(2)
+					order: 2
+				&:nth-of-type(3)
+					order: 3
+
 	.map
 		height: 360px
+
+	.parking
+		width: 100%
+		&__text
+			max-width: 240px
+			br
+				display: none
 
 	.questions
 		&.--pt
