--- a/source/dev/_/sys/css/responsive.css
+++ b/source/dev/_/sys/css/responsive.css
@@ -895,6 +895,13 @@
   .footer__bot {
     padding-bottom: 35px;
   }
+
+  .thanks__content {
+    max-width: 500px;
+  }
+  .thanks__img {
+    right: 0;
+  }
 }
 @media only screen and (max-width: 992px) {
   .case {
@@ -1873,6 +1880,22 @@
   }
   .footer__copy br {
     display: none;
+  }
+
+  .thanks__content {
+    max-width: 450px;
+  }
+  .thanks__img {
+    width: 350px;
+    right: -10px;
+    bottom: -350px;
+  }
+
+  .call__wrap {
+    padding-left: 0;
+  }
+  .call__icon {
+    right: -40px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -4472,5 +4495,36 @@
   }
   .j-form__policy {
     text-align: center;
+  }
+
+  .thanks {
+    padding-bottom: 0;
+  }
+  .thanks__content {
+    max-width: 100%;
+  }
+  .thanks__img-wrap {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -20px;
+  }
+  .thanks__img {
+    position: relative;
+    right: 0;
+    bottom: 20px;
+    width: 270px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .thanks__person {
+    display: none;
+  }
+  .thanks__call .call__wrap {
+    padding-left: 0;
+  }
+
+  .call__icon {
+    display: none;
   }
 }
